# nexus-sdk

./: .dockerignore  .gitignore  .markdownlint.json  .typos.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  cliff.toml  codecov.yml  deny.toml  justfile  rust-toolchain.toml
cli/: .just  Cargo.toml  README.md
cli/src/: cli_conf.rs  display.rs  error.rs  main.rs  nexus_data_json.rs  prelude.rs  sui.rs  utils.rs
cli/src/completion/: mod.rs
cli/src/conf/: conf_get.rs  conf_set.rs  mod.rs
cli/src/crypto/: crypto_auth.rs  crypto_generate_id_key.rs  crypto_init_key.rs  crypto_key_status.rs  mod.rs
cli/src/dag/: dag_abort_expired_execution.rs  dag_execute.rs  dag_execution_cost.rs  dag_inspect_execution.rs  dag_publish.rs  dag_validate.rs  mod.rs  parser.rs  validator.rs
cli/src/gas/: gas_add_budget.rs  gas_check_balance.rs  gas_expiry_buy_ticket.rs  gas_expiry_disable.rs  gas_expiry_enable.rs  mod.rs  priority.rs
cli/src/network/: mod.rs  network_create.rs
cli/src/scheduler/: helpers.rs  mod.rs
cli/src/secrets/: helpers.rs  mod.rs  secrets_disable.rs  secrets_enable.rs  secrets_rotate.rs  secrets_status.rs  secrets_wipe.rs
cli/src/tap/: mod.rs  tap_agent.rs  tap_announce.rs  tap_bind.rs  tap_common.rs  tap_create_agent.rs  tap_create_skill_artifact.rs  tap_default_agent.rs  tap_default_target.rs  tap_dry_run.rs  tap_endpoint.rs  tap_execute.rs  tap_execution.rs  tap_output.rs  tap_payments.rs  tap_publish_skill.rs  tap_register_skill.rs  tap_registry.rs  tap_requirements.rs  tap_scaffold.rs  tap_schedule.rs  tap_schedule_address_funded.rs  tap_schedule_task.rs  tap_scheduled_task.rs  tap_settle.rs  tap_update_skill.rs  tap_validate_skill.rs  tap_vault.rs  tap_vault_deposit.rs
cli/src/tool/: mod.rs  rustc-ice-2026-04-22T12_45_50-157390.txt  tool_auth.rs  tool_claim_collateral.rs  tool_configure_verifier.rs  tool_inspect.rs  tool_inspect_onchain.rs  tool_list.rs  tool_new.rs  tool_register.rs  tool_register_offchain.rs  tool_register_onchain.rs  tool_set_invocation_cost.rs  tool_signed_http.rs  tool_unregister.rs  tool_update_timeout.rs  tool_validate.rs
cli/src/workflow/: mod.rs
dag-dsl/: .just  Cargo.toml  README.md
dag-dsl/src/: builder.rs  error.rs  lib.rs  macros.rs  scoped.rs  typed.rs
dag-dsl/tests/: compile_fail.rs  relaxed_builder.rs  scoped_builder.rs  tool_descriptor_macro.rs  typed_builder.rs  typed_scoped.rs
dag-dsl/tests/compile_fail/: connect_for_each_wrong_arity.rs  connect_for_each_wrong_arity.stderr  connect_mismatched_payload.rs  connect_mismatched_payload.stderr  inline_default_wrong_type.rs  inline_default_wrong_type.stderr  scope_collect_mismatched_payload.rs  scope_collect_mismatched_payload.stderr  scope_consume_mismatched_payload.rs  scope_consume_mismatched_payload.stderr  scope_feed_state_mismatched_payload.rs  scope_feed_state_mismatched_payload.stderr
dsl-codegen/: .just  Cargo.toml
dsl-codegen/src/: lib.rs  main.rs
sdk/: .just  Cargo.toml  MIGRATION.md  README.md  build.rs
sdk-wasm/: .gitignore  Cargo.toml  README.md  crypto_helpers.ts  package.json  test.html
sdk-wasm/src/: crypto.rs  dag_execute.rs  dag_publish.rs  dag_validate.rs  lib.rs  scheduler.rs  walrus.rs
sdk-wasm/tests/: dag_validation.test.js
sdk/src/: events.rs  faucet.rs  lib.rs  nexus_data.rs  secret_store.rs  sui.rs  tool_fqn.rs  tool_location.rs  tool_ref.rs
sdk/src/crypto/: double_ratchet.rs  session.rs  x3dh.rs
sdk/src/dag/: json.rs  mod.rs  validator.rs
sdk/src/events/: fetching.rs  mod.rs  parsing.rs  polling.rs  query.rs
sdk/src/groth16/: keys.rs
sdk/src/idents/: interface.rs  mod.rs  move_std.rs  primitives.rs  registry.rs  scheduler.rs  sui_framework.rs  tap.rs  workflow.rs
sdk/src/kat/: ast.rs  automaton.rs  config.rs  error.rs  lexer.rs  mod.rs  parser.rs  tests.rs
sdk/src/move_bindings/: mod.rs
sdk/src/move_boundary/: mod.rs
sdk/src/nexus/: address_balance.rs  client.rs  crawler.rs  crypto.rs  error.rs  gas.rs  mod.rs  models.rs  network_auth.rs  registered_key.rs  registry.rs  scheduler.rs  signer.rs  tap.rs  tool.rs  workflow.rs
sdk/src/object_crawler/: fetching.rs  wrappers.rs
sdk/src/onchain_schema_gen/: input.rs  mod.rs  output.rs  summary.rs  types.rs
sdk/src/secret_core/: error.rs  secret.rs  traits.rs
sdk/src/signed_http/: keys.rs  mod.rs  v1.rs
sdk/src/test_utils/: containers.rs  contracts.rs  faucet.rs  gas.rs  mod.rs  nexus_mocks.rs  sui_mocks.rs  wallet.rs
sdk/src/transactions/: agent_input.rs  crypto.rs  dag.rs  gas.rs  leader.rs  mod.rs  network_auth.rs  scheduler.rs  tap.rs  tool.rs
sdk/src/types/: authorization.rs  dag.rs  derive.rs  generated.rs  generated_support.rs  interface_package_config.rs  interface_version.rs  json_dag.rs  leader_registry.rs  mod.rs  move_binding_support.rs  move_collections.rs  move_json.rs  network_auth.rs  nexus_data.rs  nexus_data_parser.rs  nexus_objects.rs  payment.rs  ports_data.rs  priority_fee.rs  priority_fee_vault.rs  runtime_vertex.rs  scheduler.rs  scheduler_models.rs  secret.rs  secret_value.rs  serde_parsers.rs  shared_object_ref.rs  storage_kind.rs  sui_balance.rs  sui_net.rs  tap.rs  tool.rs  tool_meta.rs  type_name.rs  workflow.rs  workflow_models.rs
sdk/src/walrus/: client.rs  mod.rs  nexus_data.rs
sdk/tests/: common.rs  event_ingestion_api_test.rs  generate_binding.rs  interface.rs  object_crawler_test.rs  primitives.rs  scheduler_test.rs  sui_transaction_builder_reexport_test.rs  tap_contract_test.rs  test_object_crawler.rs  walrus_client_test.rs  workflow.rs
toolkit-rust/: .just  Cargo.toml  README.md  pr.md
toolkit-rust/src/: config.rs  lib.rs  nexus_tool.rs  prelude.rs  runtime.rs  serde_tracked.rs  signed_http_warp.rs
toolkit-rust/src/runtime/: tls.rs
toolkit-rust/tests/: integration.rs
tools/http/: Cargo.toml  README.md
tools/http/src/: errors.rs  helpers.rs  http.rs  http_client.rs  main.rs  models.rs
tools/llm-openai-chat-completion/: Cargo.toml  README.md
types/: .just  Cargo.toml
types/src/: events.rs  lib.rs  sui.rs
types/src/idents/: mod.rs  (+1 more)
(+301 files in other folders)
