# Specify the Nexus Toolkit for Rust crate so that it can be installed.
[workspace]
resolver = "2"
members = ["toolkit-rust", "cli", "tools/llm-openai-chat-completion"]

[workspace.dependencies]
nexus-toolkit-rust = { path = "toolkit-rust" }

schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strum = "0.27"
strum_macros = "0.27"
tokio = { version = "1.43.0", features = ["full"] }
