[workspace]
resolver = "3"
members = ["toolkit-rust", "cli", "sdk"]

[workspace.package]
edition = "2021"
version = "0.6.0"
repository = "https://github.com/Talus-Network/nexus-sdk"
homepage = "https://talus.network"
license = "Apache-2.0"
readme = "README.md"
authors = ["Talus Engineers <engineering@taluslabs.xyz>"]
keywords = ["nexus", "sdk", "cli", "talus", "web3"]
categories = [
    "api-bindings",
    "command-line-interface",
    "cryptography::cryptocurrencies",
]

[workspace.dependencies]
anyhow = "1.0.97"
argon2 = "0.5"
base64 = "0.21"
bcs = "0.1.6"
bip32 = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.48"
clap-verbosity = "2.1.0"
colored = "3.0.0"
convert_case = "0.7.1"
directories = "5"
enum_dispatch = "0.3.13"
env_logger = "0.11.7"
futures = "0.3.31"
hex = "0.4"
home = "0.5.11"
humantime = "2.2.0"
indicatif = "0.17.11"
jsonschema = "0.28.3"
keyring = "3.6"
lazy-regex = "3.4.1"
log = "^0.4.26"
minijinja = "2.8.0"
mockall = "0.14.0"
mockito = "1.7"
petgraph = "0.7.1"
portpicker = "0.1.1"
prost-types = "0.14.1"
rand = { version = "0.8", default-features = false, features = ["std"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
rpassword = "7.4.0"
rstest = "0.25.0"
schemars = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.17"
serial_test = "3.2.0"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3.19.0"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-retry = "0.3.0"
tokio-util = "0.7.18"
toml = "0.8.20"
tonic = "0.14"
warp = "0.3.7"
zeroize = "1.7"

# === Nexus deps ===
nexus-toolkit = { path = "toolkit-rust" }
nexus-sdk = { path = "sdk" }

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = "packed"
# Decrease final binary size
strip = "debuginfo"
# Exit process with SIGABRT when any thread panics
panic = "abort"
