[package]
name = "nexus-cli"
description = "Nexus CLI provides an interface to interact with the Nexus Workflow."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap_complete.workspace = true
clap-verbosity.workspace = true
clap.workspace = true
colored.workspace = true
convert_case.workspace = true
env_logger.workspace = true
hex.workspace = true
home.workspace = true
humantime.workspace = true
indicatif.workspace = true
minijinja.workspace = true
openssl.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

# === Nexus deps ===
[dependencies.nexus-sdk]
workspace = true
features = ["full"]

[dev-dependencies]
assert_matches = "1.5.0"
mockito.workspace = true
nexus-toolkit.workspace = true
rstest.workspace = true
schemars.workspace = true
serial_test.workspace = true
tempfile.workspace = true
warp = "0.3.7"

[dev-dependencies.nexus-sdk]
workspace = true
features = ["full", "test_utils"]
