[package]
name = "nexus-sdk-wasm"
description = "Nexus SDK WASM bindings for browser/web usage"

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.4"

anyhow.workspace = true
thiserror.workspace = true

hex.workspace = true
rand.workspace = true
base64.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers",
]

[dependencies.nexus-sdk]
workspace = true
features = ["wasm_types", "dag"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.wasm-bindgen-futures]
version = "0.4"
