[package]
name = "nexus-sdk"
description = "Nexus SDK provides a set of tools to interact with the Nexus Workflow."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "regenerate_bindings"
path = "src/bin/regenerate_bindings.rs"
required-features = ["binding_codegen"]

[features]
default = ["tool_fqn"]

# Tool FQN feature enables the use of the `ToolFqn` struct and `fqn!` macro.
# This feature is enabled by default.
tool_fqn = ["regex", "lazy-regex"]

# Signed HTTP feature enables application-layer Ed25519 signatures for canonical
# Tool input hashes and exact result bytes carried over HTTP.
signed_http = ["base64", "serde_json", "sha2", "hex", "thiserror", "ed25519-dalek", "rand", "bcs"]

# DAG authoring helpers: JSON parser and static validator for the typed SDK `DagSpec`.
dag = ["types", "serde_json", "petgraph"]

# On-chain tool schema generation by introspecting published Move modules.
onchain_schema_gen = ["types", "sui_types", "serde_json", "tokio"]

# Sui Types feature gives access to the re-exported Sui types.
sui_types = [
    "sui-rpc",
    "sui-sdk-types",
    "sui-crypto",
    "sui-transaction-builder",
    "tokio",
]

# Move package publishing support for deployment tooling. Runtime/full users
# should enable this explicitly only when they need to build and publish Move
# packages.
move_publish = [
    "sui_types",
    "sui_move_build",
    "move_package_alt",
]

# Binding codegen feature gates the `regenerate_bindings` binary, the network half
# of the Move binding package IR pipeline. It needs a full Tokio runtime to drive
# the gRPC fetch; the offline render in `build.rs` requires none of this.
binding_codegen = [
    "tokio/full",
    "sui-move-codegen",
    "sui-sdk-types",
    "toml",
]

# Walrus client feature enables the use of the `walrus` module, providing
# integration with the Walrus decentralized blob storage system.
walrus = ["reqwest", "futures-util", "tokio", "serde_json", "thiserror"]

# Types feature enables the use of the `types` module.
types = [
    "tool_fqn",
    "sui_types",
    "sui-move",
    "sui-move-call",
    "sui-move-ptb",
    "enum_dispatch",
    "zeroize",
    "bcs",
    "hex",
    "jsonschema",
    "serde_json",
    "sha2",
]

# Events feature enables the use of the `events` module.
events = ["types", "futures", "tokio-util", "prometheus", "lazy_static", "tracing", "tonic"]

# Transactions feature enables the use of the `transactions` module. These are
# used in the CLI and tests and hide away PTBs for various Nexus operations.
transactions = ["types", "sui-move-ptb"]

# Provides various Nexus runtime utilities like execution of workflows. Move
# package publishing helpers require the explicit `move_publish` feature.
nexus = [
    "transactions",
    "events",
    "bcs",
    "ed25519-dalek",
    "prost-types",
    "thiserror",
    "tokio",
]

# Test utils feature enables the use of the `test_utils` module. Also adds
# tempfile, tokio-retry, sui_move_build, sui_package_management and
# testcontainers-modules as dependencies.
test_utils = [
    "types",
    "sui-transaction-builder",
    "tempfile",
    "tokio-retry",
    "tokio-stream",
    "sui_move_build",
    "sui_package_management",
    "move_package",
    "move_package_alt",
    "portpicker",
    "testcontainers-modules",
    "mockall",
    "mockito",
    "tonic",
]

# Enable runtime SDK features apart from deployment-only `move_publish` and
# test-only `test_utils`.
full = [
    "tool_fqn",
    "signed_http",
    "sui_types",
    "types",
    "dag",
    "events",
    "transactions",
    "walrus",
    "nexus",
    "onchain_schema_gen",
]

[dependencies]
anyhow.workspace = true
allocative.workspace = true
chrono.workspace = true
serde.workspace = true

# === Optional deps for features ===
[dependencies.base64]
workspace = true
optional = true

[dependencies.bcs]
workspace = true
optional = true

[dependencies.enum_dispatch]
workspace = true
optional = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.hex]
version = "0.4"
optional = true

[dependencies.jsonschema]
workspace = true
optional = true

[dependencies.lazy_static]
version = "1.5"
optional = true

[dependencies.prometheus]
workspace = true
optional = true

[dependencies.petgraph]
workspace = true
optional = true

[dependencies.portpicker]
workspace = true
optional = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.rand_core]
version = "0.6.4"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.subtle]
version = "2"
optional = true

[dependencies.x25519-dalek]
version = "2"
features = ["zeroize"]
optional = true

[dependencies.xeddsa]
version = "1.0.2"
default-features = false
features = ["xed25519"]
optional = true

[dependencies.zeroize]
workspace = true
features = ["zeroize_derive"]
optional = true

[dependencies.ciborium]
version = "0.2"
optional = true

# === Optional deps ===
[dependencies.futures-util]
version = "0.3"
optional = true

[dependencies.lazy-regex]
workspace = true
optional = true

[dependencies.mockall]
workspace = true
optional = true

[dependencies.mockito]
workspace = true
optional = true

[dependencies.regex]
workspace = true
optional = true

[dependencies.reqwest]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.prost-types]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true
optional = true

[dependencies.ed25519-dalek]
version = "2"
optional = true

[dependencies.tokio]
workspace = true
features = ["io-util"]
optional = true

[dependencies.tokio-stream]
workspace = true
optional = true

[dependencies.tokio-retry]
workspace = true
optional = true

[dependencies.tokio-util]
workspace = true
optional = true

[dependencies.tonic]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

# === Move binding ===
[dependencies.sui-move-codegen]
git = "https://github.com/Talus-Network/move-binding"
branch = "feat/source_names"
optional = true

[dependencies.sui-move]
git = "https://github.com/Talus-Network/move-binding"
branch = "feat/source_names"
features = ["derive"]
optional = true

[dependencies.sui-move-call]
git = "https://github.com/Talus-Network/move-binding"
branch = "feat/source_names"
optional = true

[dependencies.sui-move-ptb]
git = "https://github.com/Talus-Network/move-binding"
branch = "feat/source_names"
optional = true

# === Sui deps ===
[dependencies.sui-rpc]
version = "0.3.1"
optional = true

[dependencies.sui-sdk-types]
version = "0.3.1"
features = ["rand", "serde"]
optional = true

[dependencies.sui-crypto]
version = "0.3.0"
features = ["ed25519", "pem"]
optional = true

[dependencies.sui-transaction-builder]
version = "0.3.1"
optional = true

[dependencies.sui_move_build]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.73.2"
package = "sui-move-build"
optional = true

[dependencies.sui_package_management]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.73.2"
package = "sui-package-management"
optional = true

[dependencies.move_package]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.73.2"
package = "move-package"
optional = true

[dependencies.move_package_alt]
git = "https://github.com/MystenLabs/sui"
tag = "mainnet-v1.73.2"
package = "move-package-alt"
optional = true

[dependencies.testcontainers-modules]
git = "https://github.com/Talus-Network/testcontainers-rs-modules-community"
branch = "feat/add-sui-support"
features = ["sui", "redis", "postgres"]
optional = true

[dependencies.toml]
workspace = true
optional = true

# === Dev deps ===
[dev-dependencies]
assert_matches = "1.5.0"
tokio = { workspace = true, features = ["full", "macros"] }
serde_json.workspace = true
mockall.workspace = true
mockito.workspace = true
portpicker.workspace = true
tempfile.workspace = true
tonic.workspace = true
toml.workspace = true

# === Build deps ===
[build-dependencies]
toml.workspace = true

[build-dependencies.sui-move-codegen]
git = "https://github.com/Talus-Network/move-binding"
branch = "feat/source_names"

[dependencies.blake3]
version = "1.3"
optional = true

[dependencies.lru]
version = "0.12"
optional = true
