[package]
name = "nexus-toolkit-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-types.workspace = true

anyhow.workspace = true
reqwest = "0.12.12"
schemars = "0.8.21"
serde.workspace = true
serde_json = "1.0.138"
warp = "0.3.7"

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serial_test = "3.2.0"
tokio = { version = "1.43.0", features = ["macros"] }
