[package]
name = "nexus-toolkit"
description = "Nexus Toolkit provides a Rust framework to create new Nexus Tools."

edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bcs.workspace = true
bytes = "1"
ed25519-dalek = "2"
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
hex.workspace = true
warp.workspace = true
env_logger.workspace = true
log.workspace = true
notify = "8.2.0"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-rustls.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tracing = "0.1"
# === Nexus deps ===
nexus-sdk = { workspace = true, features = ["signed_http", "types"] }

[dev-dependencies]
rcgen = "0.13"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
tempfile.workspace = true
tokio = { version = "1.44.1", features = ["macros"] }
