[package]
name = "llm-openai-chat-completion"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
strum.workspace = true
strum_macros.workspace = true

async-openai = "0.27"

# Nexus Toolkit
nexus-toolkit-rust.workspace = true
